...
                  ),
                ),
              ),
            ),
            const SizedBox(height: 8),
            Text(
              'Thêm',
              maxLines: 1,
              textAlign: TextAlign.center,
              style: Theme.of(context).textTheme.bodySmall?.copyWith(
                fontWeight: FontWeight.w500,
                fontSize: 12,
                height: 1.2,
...
